[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/NewEnemy/EnemyWrapper.gd" type="Script" id=1]
[ext_resource path="res://Src/Components/DiceWrapper.gd" type="Script" id=2]
[ext_resource path="res://Src/Components/Limiter.gd" type="Script" id=3]
[ext_resource path="res://Src/Components/DiceCore/DiceCore.gd" type="Script" id=4]
[ext_resource path="res://Src/GUI/EnemyGUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/NewEnemy/SM/DiceBehaviourMachine.gd" type="Script" id=6]
[ext_resource path="res://Src/NewEnemy/EnemyHealth.gd" type="Script" id=7]
[ext_resource path="res://Src/NewEnemy/SM/DoNothing.gd" type="Script" id=8]

[node name="EnemyWrapper" type="Node2D"]
script = ExtResource( 1 )

[node name="GUIwrapper" parent="." instance=ExtResource( 5 )]

[node name="DiceTimerProgress" parent="GUIwrapper/EnemyGUI/VBoxContainer" index="0"]
timer = NodePath("../../../../DiceTimer")

[node name="EnemyHealth" type="Node" parent="."]
script = ExtResource( 7 )
dice_wrapper = NodePath("../DiceWrapper")

[node name="DiceBehaviourMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="DoNothing" type="Node" parent="DiceBehaviourMachine"]
script = ExtResource( 8 )
behaviour_name = "do nothing"

[node name="DiceWrapper" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DiceCore" type="Node" parent="DiceWrapper"]
script = ExtResource( 4 )

[node name="Limiter" type="Node" parent="DiceWrapper"]
script = ExtResource( 3 )

[node name="DiceTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="roll_anim_finished" from="GUIwrapper/EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/DiceCore/RollLabel" to="." method="_on_RollLabel_roll_anim_finished"]
[connection signal="died" from="EnemyHealth" to="." method="dead"]
[connection signal="health_changed" from="EnemyHealth" to="GUIwrapper" method="_on_health_changed"]
[connection signal="behaviour_changed" from="DiceBehaviourMachine" to="GUIwrapper" method="_on_behaviour_changed"]
[connection signal="dice_core_changed" from="DiceWrapper" to="GUIwrapper" method="_on_DiceWrapper_dice_core_changed"]
[connection signal="dice_rolled" from="DiceWrapper" to="GUIwrapper" method="_on_DiceWrapper_dice_rolled"]
[connection signal="limiter_changed" from="DiceWrapper" to="GUIwrapper" method="_on_DiceWrapper_limiter_changed"]
[connection signal="number_changed" from="DiceWrapper" to="GUIwrapper" method="_on_DiceWrapper_number_changed"]
[connection signal="timeout" from="DiceTimer" to="DiceWrapper" method="get_number"]

[editable path="GUIwrapper"]
